tests/errors/null_to_nonnull_argument.dang
# Null cannot be passed to a non-null function argument
pub echo(value: String!): String! {
  value
}

pub result = echo(null)
